--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.3",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
+    "unsplash-js": "^4.8.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuetify": "^1.0.0",
